# arobi-network

./: .dockerignore  .gitattributes  .gitignore  BUILD_FORCE.txt  Cargo.toml  Dockerfile  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
docs/: Audit-Atomic-Append-v3.2.6.md  Audit-Concurrent-Append-Guard-v3.2.6.md  Audit-Lane-And-Transaction-Integrity-v3.2.2.md  Audit-Lane-Legacy-Migration-v3.2.4.md  CI.md  LAAS_AUDIT_LANE_CONTRACT.md  Training-Coordinator-Audit-Sink-v3.2.9.md  Training-Coordinator-Quorum-Guard-v3.2.10.md  Training-Corpus-Export-v3.2.3.md  Training-Corpus-Manifest-v3.2.5.md  Training-Corpus-Receipt-v3.2.8.md  Training-Corpus-Vision-Metadata-v3.2.6.md  Training-Corpus-Vision-Value-Sanitizer-v3.2.7.md  Training-Legacy-Completion-Reclassification-v3.2.11.md
scripts/: install-startup.ps1  uninstall-startup.ps1
src/: api.rs  block.rs  config.rs  consensus.rs  crypto.rs  main.rs  mempool.rs  node.rs  p2p.rs  peer.rs  poi.rs  rate_limit.rs  security.rs  store.rs
src/agents/: compute_scheduler.rs  firecrawler.rs  inference_router.rs  mod.rs  records_keeper.rs  reputation_oracle.rs  storage_keeper.rs  tool_executor.rs  training_coordinator.rs
src/audit/: ledger.rs  mod.rs  tribunal.rs
src/compute/: mod.rs  reputation.rs  sandbox.rs  scheduler.rs  types.rs
src/fs/: chunker.rs  dht.rs  local_store.rs  mod.rs  proof.rs  types.rs
src/llm/: architecture.rs  checkpoint.rs  dataset.rs  federated.rs  kv_cache.rs  mod.rs  pipeline.rs  registry.rs  sampler.rs  stage.rs  tensor_io.rs  tokenizer.rs  training.rs  types.rs
